unpackaged/main/default/objects/X20_Groups_Member__c/X20_Groups_Member__c.object-meta.xml
<CustomObject>
    <description>Member card for 20 Group members</description>
    <label>20 Group Member Account</label>
    <nameField>
        <label>20 Group Member Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>20 Groups Member Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>