unpackaged/main/default/objects/X20_Groups_Member__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>20 Groups Member Accounts</relationshipLabel>
    <relationshipName>X20_Groups_Members</relationshipName>
    <type>Lookup</type>
</CustomField>