unpackaged/main/default/objects/X20_Groups_Member__c/fields/Account_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Account_ID_18__c</fullName>
    <formula>Account__r.Account_Id__c</formula>
    <label>Account ID (18)</label>
    <type>Text</type>
</CustomField>