unpackaged/main/default/objects/X20_Groups_Member__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipName>X20_Groups_Members</relationshipName>
    <type>Lookup</type>
</CustomField>