unpackaged/main/default/objects/X20_Groups_Member__c/fields/Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Date__c</fullName>
    <formula>IF(
	DAY(TODAY()) &gt; 15,
	DATE(
		YEAR( 
			ADDMONTHS(TODAY(),1) 
		),
		MONTH( 
			ADDMONTHS(TODAY(),1) 
		),
		5
	),
	TODAY() + 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Date (Code)</label>
    <type>Date</type>
</CustomField>