unpackaged/main/default/objects/X20_Groups_Member__c/fields/Billing_Info_Sent__c.field-meta.xml
<CustomField>
    <fullName>Billing_Info_Sent__c</fullName>
    <label>Billing Info Sent</label>
    <type>Date</type>
</CustomField>