unpackaged/main/default/objects/X20_Groups_Member__c/fields/Can_Upload_Webform__c.field-meta.xml
<CustomField>
    <fullName>Can_Upload_Webform__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Upload Webform?</label>
    <type>Checkbox</type>
</CustomField>