unpackaged/main/default/objects/X20_Groups_Member__c/fields/Co_Member__c.field-meta.xml
<CustomField>
    <fullName>Co_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>X20_Groups_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>