unpackaged/main/default/objects/X20_Groups_Member__c/fields/Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Coordinator__c</fullName>
    <formula>Group_ID__r.NCM_Support_Staff__r.Contact_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coordinator</label>
    <type>Text</type>
</CustomField>