unpackaged/main/default/objects/X20_Groups_Member__c/fields/Date_Last_Verified__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Verified__c</fullName>
    <inlineHelpText>Last date WinMaster Data was uploaded to this record. If the date is more than 9 days out of today&#39;s date it indicates that this record is no longer in WinMaster or there is a sync issue.</inlineHelpText>
    <label>Date Last Verified</label>
    <type>Date</type>
</CustomField>