unpackaged/main/default/objects/X20_Groups_Member__c/fields/Days_as_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Days_as_Prospect__c</fullName>
    <formula>IF( ISBLANK( Original_Active_Date__c ), TODAY() - DATEVALUE( CreatedDate ), Original_Active_Date__c - DATEVALUE( CreatedDate ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days as Prospect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>