unpackaged/main/default/objects/X20_Groups_Member__c/fields/Days_Since_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Meeting__c</fullName>
    <formula>IF( ISBLANK( Original_Active_Date__c ) ,  TODAY() - Meeting_Start_Date__c ,  Original_Active_Date__c - Meeting_Start_Date__c )</formula>
    <label>Days Since Meeting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>