unpackaged/main/default/objects/X20_Groups_Member__c/fields/Department_NCM_Classification_0__c.field-meta.xml
<CustomField>
    <fullName>Department_NCM_Classification_0__c</fullName>
    <formula>TEXT( Member_Name__r.NCM_Department__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department (NCM Classification)</label>
    <type>Text</type>
</CustomField>