unpackaged/main/default/objects/X20_Groups_Member__c/fields/Disconnect_Date__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Date__c</fullName>
    <inlineHelpText>Date the member left the group</inlineHelpText>
    <label>Disconnect Date</label>
    <type>Date</type>
</CustomField>