unpackaged/main/default/objects/X20_Groups_Member__c/fields/Disconnect_Details__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Details__c</fullName>
    <label>Disconnect Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cancel_and_Disconnect_Details</valueSetName>
    </valueSet>
</CustomField>