unpackaged/main/default/objects/X20_Groups_Member__c/fields/Disconnect_Notes__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Notes__c</fullName>
    <label>Disconnect Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>