unpackaged/main/default/objects/X20_Groups_Member__c/fields/Disconnect_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Reason__c</fullName>
    <label>Disconnect Reason (Old)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Covid-19</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>