unpackaged/main/default/objects/X20_Groups_Member__c/fields/Executive_Committee__c.field-meta.xml
<CustomField>
    <fullName>Executive_Committee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Member is part of group executive committee</inlineHelpText>
    <label>Executive Committee</label>
    <type>Checkbox</type>
</CustomField>