unpackaged/main/default/objects/X20_Groups_Member__c/fields/Financial_Data_Contact__c.field-meta.xml
<CustomField>
    <fullName>Financial_Data_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is controlled by the Add New Contact process.</inlineHelpText>
    <label>Financial Data Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>20 Groups Member Accounts (Financial Data Contact)</relationshipLabel>
    <relationshipName>X20_Groups_Members5</relationshipName>
    <type>Lookup</type>
</CustomField>