unpackaged/main/default/objects/X20_Groups_Member__c/fields/Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Group_ID__c</fullName>
    <label>Group Number</label>
    <referenceTo>Twenty_Groups__c</referenceTo>
    <relationshipName>X20_Groups_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>