unpackaged/main/default/objects/X20_Groups_Member__c/fields/Group_Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Member_Number__c</fullName>
    <formula>Group_ID__r.Name &amp; &#39;-&#39; &amp;  Member_Number_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group / Member Number</label>
    <type>Text</type>
</CustomField>