unpackaged/main/default/objects/X20_Groups_Member__c/fields/Group_Owner_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Owner_Contact_Id__c</fullName>
    <formula>Group_ID__r.NCM_Proprietor__r.ContactID_18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Owner Contact Id</label>
    <type>Text</type>
</CustomField>