unpackaged/main/default/objects/X20_Groups_Member__c/fields/Group_Super_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Super_Type__c</fullName>
    <formula>TEXT( Group_ID__r.SuperType__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Super Type</label>
    <type>Text</type>
</CustomField>