unpackaged/main/default/objects/X20_Groups_Member__c/fields/Hold_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_End_Date__c</fullName>
    <inlineHelpText>Date membership suspension ends</inlineHelpText>
    <label>Hold End Date</label>
    <type>Date</type>
</CustomField>