unpackaged/main/default/objects/X20_Groups_Member__c/fields/Is_Fast_Tracked__c.field-meta.xml
<CustomField>
    <fullName>Is_Fast_Tracked__c</fullName>
    <label>Is Fast Tracked?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Binary</valueSetName>
    </valueSet>
</CustomField>