unpackaged/main/default/objects/X20_Groups_Member__c/fields/Is_Second_Dealership__c.field-meta.xml
<CustomField>
    <fullName>Is_Second_Dealership__c</fullName>
    <label>Is Second Dealership?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Binary</valueSetName>
    </valueSet>
</CustomField>