unpackaged/main/default/objects/X20_Groups_Member__c/fields/Listserv__c.field-meta.xml
<CustomField>
    <fullName>Listserv__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Member is part of Listserv</inlineHelpText>
    <label>Listserv</label>
    <type>Checkbox</type>
</CustomField>