unpackaged/main/default/objects/X20_Groups_Member__c/fields/Local_Admin__c.field-meta.xml
<CustomField>
    <fullName>Local_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Member is a local admin for Member Portal</inlineHelpText>
    <label>Local Admin</label>
    <type>Checkbox</type>
</CustomField>