unpackaged/main/default/objects/X20_Groups_Member__c/fields/Local_Admin_Contact__c.field-meta.xml
<CustomField>
    <fullName>Local_Admin_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is controlled by the Add New Contact process.</inlineHelpText>
    <label>Local Admin Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>20 Groups Member Accounts (Local Admin Contact)</relationshipLabel>
    <relationshipName>X20_Groups_Members4</relationshipName>
    <type>Lookup</type>
</CustomField>