unpackaged/main/default/objects/X20_Groups_Member__c/fields/Meeting_CAD_Entered__c.field-meta.xml
<CustomField>
    <fullName>Meeting_CAD_Entered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meeting CAD Entered</label>
    <type>Checkbox</type>
</CustomField>