unpackaged/main/default/objects/X20_Groups_Member__c/fields/Meeting_CAD_Entered_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Meeting_CAD_Entered_Stamp__c</fullName>
    <label>Meeting CAD Entered Stamp</label>
    <type>DateTime</type>
</CustomField>