unpackaged/main/default/objects/X20_Groups_Member__c/fields/Meeting_Location__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Location__c</fullName>
    <label>Meeting Location (Code)</label>
    <type>TextArea</type>
</CustomField>