unpackaged/main/default/objects/X20_Groups_Member__c/fields/Mega_Book_Heading__c.field-meta.xml
<CustomField>
    <fullName>Mega_Book_Heading__c</fullName>
    <label>Mega Book Heading</label>
    <length>15</length>
    <type>Text</type>
</CustomField>