unpackaged/main/default/objects/X20_Groups_Member__c/fields/Member_CAD_Entered__c.field-meta.xml
<CustomField>
    <fullName>Member_CAD_Entered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Member CAD Entered</label>
    <type>Checkbox</type>
</CustomField>