unpackaged/main/default/objects/X20_Groups_Member__c/fields/Member_CAD_Entered_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Member_CAD_Entered_Stamp__c</fullName>
    <label>Member CAD Entered Stamp</label>
    <type>DateTime</type>
</CustomField>