unpackaged/main/default/objects/X20_Groups_Member__c/fields/Member_Candidate_Notes__c.field-meta.xml
<CustomField>
    <fullName>Member_Candidate_Notes__c</fullName>
    <label>Member Candidate Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>