unpackaged/main/default/objects/X20_Groups_Member__c/fields/Member_Email__c.field-meta.xml
<CustomField>
    <fullName>Member_Email__c</fullName>
    <inlineHelpText>Email member wishes to use for communication for this 20 Group membership</inlineHelpText>
    <label>Member Email</label>
    <type>Email</type>
</CustomField>