unpackaged/main/default/objects/X20_Groups_Member__c/fields/Member_ID_code__c.field-meta.xml
<CustomField>
    <fullName>Member_ID_code__c</fullName>
    <formula>Group_ID__r.Name +&quot;-&quot;+ if (isblank(Member_Number__c),  Member_Name_Code__c, text(Member_Number__c) )</formula>
    <label>Member ID (code)</label>
    <type>Text</type>
</CustomField>