unpackaged/main/default/objects/X20_Groups_Member__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>X20_Groups_Members</relationshipName>
    <type>Lookup</type>
</CustomField>