unpackaged/main/default/objects/X20_Groups_Member__c/fields/Member_Name_Code__c.field-meta.xml
<CustomField>
    <fullName>Member_Name_Code__c</fullName>
    <description>Used for code formulas DO NOT DISPLAY</description>
    <formula>Member_Name__r.Contact_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for code formulas DO NOT DISPLAY</inlineHelpText>
    <label>Member Name (Code)</label>
    <type>Text</type>
</CustomField>