unpackaged/main/default/objects/X20_Groups_Member__c/fields/Member_Notes__c.field-meta.xml
<CustomField>
    <fullName>Member_Notes__c</fullName>
    <label>Member Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>