unpackaged/main/default/objects/X20_Groups_Member__c/fields/Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Member_Number__c</fullName>
    <label>Member Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>