unpackaged/main/default/objects/X20_Groups_Member__c/fields/Member_Number_Code__c.field-meta.xml
<CustomField>
    <fullName>Member_Number_Code__c</fullName>
    <description>THis is used for Workato integration to convert to text</description>
    <formula>LPAD(text(Member_Number__c) ,2,&#39;0&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Number (Code)</label>
    <type>Text</type>
</CustomField>