unpackaged/main/default/objects/X20_Groups_Member__c/fields/Member_Status_Change_code__c.field-meta.xml
<CustomField>
    <fullName>Member_Status_Change_code__c</fullName>
    <label>Member Status Change (code)</label>
    <type>DateTime</type>
</CustomField>