unpackaged/main/default/objects/X20_Groups_Member__c/fields/Moderator_Code__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Moderator (Code)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>X20_Groups_Members</relationshipName>
    <type>Lookup</type>
</CustomField>