unpackaged/main/default/objects/X20_Groups_Member__c/fields/NCM_Lead__c.field-meta.xml
<CustomField>
    <fullName>NCM_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCM Lead</label>
    <referenceTo>NCM_Lead_Entry__c</referenceTo>
    <relationshipName>X20_Groups_Members</relationshipName>
    <type>Lookup</type>
</CustomField>