unpackaged/main/default/objects/X20_Groups_Member__c/fields/NCM_Proprietor__c.field-meta.xml
<CustomField>
    <fullName>NCM_Proprietor__c</fullName>
    <description>Field label change based on business request</description>
    <formula>Owner_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Owner</label>
    <type>Text</type>
</CustomField>