unpackaged/main/default/objects/X20_Groups_Member__c/fields/New_WinM_Migration_Record_c__c.field-meta.xml
<CustomField>
    <fullName>New_WinM_Migration_Record_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New WinM Migration Record</label>
    <type>Checkbox</type>
</CustomField>