unpackaged/main/default/objects/X20_Groups_Member__c/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <formula>Member_Name__r.Nickname__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nickname</label>
    <type>Text</type>
</CustomField>