unpackaged/main/default/objects/X20_Groups_Member__c/fields/Number_of_Days_on_Hold__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_on_Hold__c</fullName>
    <formula>IF(ISBLANK(Hold_End_Date__c), TODAY() - Hold_Start_Date__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days on Hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>