unpackaged/main/default/objects/X20_Groups_Member__c/fields/On_Hold_Last_Composite_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Last_Composite_Date__c</fullName>
    <description>Include In Composite as a Regular Member Using &quot;Month/Year&quot; FS Data</description>
    <inlineHelpText>Include In Composite as a Regular Member Using &quot;Month/Year&quot; FS Data</inlineHelpText>
    <label>Include in Comp Using Month/Year FS Data</label>
    <type>Date</type>
</CustomField>