unpackaged/main/default/objects/X20_Groups_Member__c/fields/Opportunity_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Name__c</fullName>
    <formula>Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp;  Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Name</label>
    <type>Text</type>
</CustomField>