unpackaged/main/default/objects/X20_Groups_Member__c/fields/Original_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Active_Date__c</fullName>
    <inlineHelpText>Date online data is accessible</inlineHelpText>
    <label>Original Data Access Date</label>
    <type>Date</type>
</CustomField>