unpackaged/main/default/objects/X20_Groups_Member__c/fields/Originating_Client_Case__c.field-meta.xml
<CustomField>
    <fullName>Originating_Client_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Client Case</label>
    <referenceTo>Client_Support_Ticket__c</referenceTo>
    <relationshipLabel>20 Groups Members</relationshipLabel>
    <relationshipName>X20_Groups_Members</relationshipName>
    <type>Lookup</type>
</CustomField>