unpackaged/main/default/objects/X20_Groups_Member__c/fields/Owner_Code__c.field-meta.xml
<CustomField>
    <fullName>Owner_Code__c</fullName>
    <label>Owner (Code)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>