unpackaged/main/default/objects/X20_Groups_Member__c/fields/Part_of_Executive_Committee__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Executive_Committee__c</fullName>
    <label>Part of Executive Committee?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Binary</valueSetName>
    </valueSet>
</CustomField>