unpackaged/main/default/objects/X20_Groups_Member__c/fields/Phone_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Phone_Country_Code__c</fullName>
    <label>Phone Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>