unpackaged/main/default/objects/X20_Groups_Member__c/fields/Phone_Description__c.field-meta.xml
<CustomField>
    <fullName>Phone_Description__c</fullName>
    <label>Phone Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mob</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>