unpackaged/main/default/objects/X20_Groups_Member__c/fields/Postal_Code_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_Code__c</fullName>
    <formula>Account__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Code (Code)</label>
    <type>Text</type>
</CustomField>