unpackaged/main/default/objects/X20_Groups_Member__c/fields/Preferred_Title__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Title__c</fullName>
    <formula>Member_Name__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Title</label>
    <type>Text</type>
</CustomField>