unpackaged/main/default/objects/X20_Groups_Member__c/fields/Profile_Comparison_Link__c.field-meta.xml
<CustomField>
    <fullName>Profile_Comparison_Link__c</fullName>
    <label>Profile Comparison Link</label>
    <type>Url</type>
</CustomField>