unpackaged/main/default/objects/X20_Groups_Member__c/fields/Proprietary_Group__c.field-meta.xml
<CustomField>
    <fullName>Proprietary_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proprietary Group</label>
    <referenceTo>Proprietary_Group__c</referenceTo>
    <relationshipLabel>20 Groups Members</relationshipLabel>
    <relationshipName>X20_Groups_Members</relationshipName>
    <type>Lookup</type>
</CustomField>