unpackaged/main/default/objects/X20_Groups_Member__c/fields/Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Date__c</fullName>
    <description>This is populated with the Current Date and is read only for all profiles besides System Admin.</description>
    <label>Rejection Date</label>
    <type>Date</type>
</CustomField>