unpackaged/main/default/objects/X20_Groups_Member__c/fields/Reporting_Kick_Code__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Kick_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for fast updating records en masse</description>
    <label>Reporting Kick (Code)</label>
    <type>Checkbox</type>
</CustomField>