unpackaged/main/default/objects/X20_Groups_Member__c/fields/Shipping_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_2__c</fullName>
    <label>Shipping Address 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>