unpackaged/main/default/objects/X20_Groups_Member__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <inlineHelpText>Mailing address member wishes to use for this 20 Group membership</inlineHelpText>
    <label>Shipping Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>