unpackaged/main/default/objects/X20_Groups_Member__c/fields/Shipping_Label__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Label__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Label</label>
    <referenceTo>Shipping_Label__c</referenceTo>
    <relationshipLabel>20 Groups Member Accounts</relationshipLabel>
    <relationshipName>X20_Groups_Member_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>