unpackaged/main/default/objects/X20_Groups_Member__c/fields/Shipping_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Not_Required__c</fullName>
    <formula>IF( Group_ID__r.Shipping_Not_Required__c = True, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Not Required</label>
    <type>Checkbox</type>
</CustomField>