unpackaged/main/default/objects/X20_Groups_Member__c/fields/Shipping_Note__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Note__c</fullName>
    <label>Shipping Note</label>
    <length>8</length>
    <type>Text</type>
</CustomField>