unpackaged/main/default/objects/X20_Groups_Member__c/fields/Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Postal_Code__c</fullName>
    <label>Shipping Postal Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>