unpackaged/main/default/objects/X20_Groups_Member__c/fields/Shipping_Postal_Code_String__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Postal_Code_String__c</fullName>
    <label>Shipping Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>