unpackaged/main/default/objects/X20_Groups_Member__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Date the member joined the 20 Group</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>