unpackaged/main/default/objects/X20_Groups_Member__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Global_Product_Service_Status</valueSetName>
    </valueSet>
</CustomField>