unpackaged/main/default/objects/X20_Groups_Member__c/fields/Status_Changed_Date_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Changed_Date_Code__c</fullName>
    <description>Supports FLow Retail Solutions Engine - Modify 20 Group Meeting by allowing flow to see when the member status was changed to determine if the member should be added or deleted from the meeting roster(s)</description>
    <label>Status Changed Date (Code)</label>
    <type>DateTime</type>
</CustomField>