unpackaged/main/default/objects/X20_Groups_Member__c/fields/Supplement_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supplement_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Supplemental Data Contact</description>
    <label>Supplemental Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>X20_Groups_Members6</relationshipName>
    <type>Lookup</type>
</CustomField>