unpackaged/main/default/objects/X20_Groups_Member__c/fields/Support_Staff_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Support_Staff_Contact_Id__c</fullName>
    <formula>Group_ID__r.NCM_Support_Staff__r.ContactID_18__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Staff Contact Id</label>
    <type>Text</type>
</CustomField>