unpackaged/main/default/objects/X20_Groups_Member__c/fields/Suspension_End__c.field-meta.xml
<CustomField>
    <fullName>Suspension_End__c</fullName>
    <inlineHelpText>Date the membership will resume</inlineHelpText>
    <label>Suspension End</label>
    <type>Date</type>
</CustomField>