unpackaged/main/default/objects/X20_Groups_Member__c/fields/Suspension_Start__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Start__c</fullName>
    <inlineHelpText>Date a suspension of membership begins</inlineHelpText>
    <label>Suspension Start</label>
    <type>Date</type>
</CustomField>